# image_pipeline

./: .gitignore  README.md  Readme.md  example.yaml  pyproject.toml  requirements.txt
image_pipeline/: configuration.py  image_wrapper.py  main.py  task.py  task_executor.py  task_generator.py
image_pipeline/stages/: __init__.py  crop_stage.py  jpeg_lossless_compression.py  jpeg_lossy_compression.py  resize_stage.py  stage.py
