[tool.poetry]
name = "image-pipeline"
version = "0.1.0"
description = ""
authors = ["MarcoGlauser <marco.glauser@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pillow = "*"
pyyaml = "*"
click = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
image_pipeline = 'image_pipeline.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
